--- a/flaskr/static/css/src/style.css
+++ b/flaskr/static/css/src/style.css
@@ -248,7 +248,7 @@
         @apply  bg-gray-300 hover:bg-lightorange focus:bg-orange focus:outline-none border sm:border-2 border-gray-300 hover:border-lightorange hover:shadow focus:shadow-inner rounded-full cursor-pointer duration-300 text-gray-700 text-sm sm:text-base py-2 sm:py-1 px-4 sm:px-3;
     }
     .btn-back {
-        @apply h-6 md:h-7 lg:h-8 xl:h-12 w-6 md:w-7 lg:w-8 xl:w-12 flex items-center justify-center bg-transparent hover:bg-white border lg:border-2 border-white shadow-none hover:shadow rounded-full duration-300 hover:text-pink-400;
+        @apply h-6 md:h-7 lg:h-8 xl:h-12 w-6 md:w-7 lg:w-8 xl:w-12 flex items-center justify-center bg-transparent hover:bg-white border lg:border-2 border-white shadow-none hover:shadow rounded-full duration-300 hover:text-orange;
     }
     .btn-back-style {
         @apply fixed bottom-2 md:bottom-3 xl:bottom-4 right-2 md:right-3 xl:right-4;
