--- a/flaskr/templates/journal/journal.html
+++ b/flaskr/templates/journal/journal.html
@@ -11,19 +11,19 @@
     {% for journal in journals %}
     <div class="h-screen flex flex-wrap items-center border">
 
-    <div class="border-2 w-full h-full sm:h-5/6 lg:h-full xl:h-5/6 shadow-md bg-no-repeat bg-cover bg-center rounded" style="background-image: url(/static/image/paper6.png);" id="{{ journal.id }}">
+    <div class="border-2 w-full h-full sm:h-5/6 md:h-full lg:h-5/6 shadow-md bg-no-repeat bg-cover bg-center rounded" style="background-image: url(/static/image/paper6.png);" id="{{ journal.id }}">
         <div class="border-2  w-full h-1/2 2xl:h-2/3 flex justify-center relative">
             <div class="flex justify-center w-5/6 h-full bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
-                <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-2 md:-top-14">
+                <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-2 md:-top-10 2xl:-top-14">
                 <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
-                    <h1 class="text-3xl 2xl:text-4xl text-center">
+                    <h1 class="text-2xl xl:text-3xl 2xl:text-4xl text-center">
                         {{ journal.title }}
                     </h1>
                 </div>
             </div>
             <div class="w-1/3 absolute top-16 right-0 transform rotate-2 flex items-center justify-center">
                 <img src="/static/image/label3.png" alt="" class="w-full shadow-md">
-                <h1 class="absolute text-xl 2xl:text-2xl text-center">
+                <h1 class="absolute text-lg xl:text-xl 2xl:text-2xl text-center">
                     {{ journal.city }}, {{ journal.country }}
                 </h1>
             </div>
@@ -38,8 +38,8 @@
                 <div class="w-full flex items-center justify-between mt-2 border">
                 {% for user in users %}
                 {% if journal.from_user_id == user.id %}
-                    <div class="w-1/3 items-center flex">
-                        <div class="w-1/3 2xl:w-1/4">
+                    <div class="w-1/3 items-center flex border">
+                        <div class="w-1/2 xl:w-1/3 2xl:w-1/4">
                             {% if user.picture_path %}
                             <img src="{{ url_for('static', filename=user.picture_path) }}" class="icon-style">
                             {% else %}
@@ -73,8 +73,8 @@
                 {% else %}
                 <p>
                     <a href="{{ url_for('signup.signup') }}">
-                        <button class="btn-lightorange px-3">
-                            ♡ You can save your favs after sign up!
+                        <button class="btn-lightorange-sm px-3">
+                            ♡ You can save it after sign up!
                         </button>
                     </a>
                 </p>
