--- a/flaskr/templates/signup/signup.html
+++ b/flaskr/templates/signup/signup.html
@@ -7,7 +7,7 @@
     {{ super() }}
     {% endblock %}
     
-    <div class="bg-style border">
+    <div class="bg-style">
     
         <div class="layout-3">
             <h1 class="subtitle">Sign Up</h1>
@@ -27,7 +27,7 @@
                         {{render_field(form.password_confirm, class="input-form")}}
                     </h6>
                     <h6 class="mt-4 lg:mt-8">
-                        {{form.submit(class="h-full btn-blue")}}
+                        {{form.submit(class="h-full btn-lightorange")}}
                     </h6>
                 </form>
             </div>
