--- a/flaskr/static/css/public/style.css
+++ b/flaskr/static/css/public/style.css
@@ -920,6 +920,14 @@ ul {
 .btn-toggle{
   --tw-border-opacity: 1;
   border-color: rgba(55, 65, 81, var(--tw-border-opacity));
+}
+
+.btn-toggle:hover{
+  --tw-border-opacity: 1;
+  border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+}
+
+.btn-toggle{
   border-radius: 0.25rem;
   border-width: 1px;
   display: flex;
@@ -936,6 +944,14 @@ ul {
   padding-bottom: 0.5rem;
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.btn-toggle:hover{
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+.btn-toggle{
   transition-duration: 300ms;
 }
 
@@ -1745,17 +1761,17 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 1.5rem;
+  margin-top: 2rem;
   padding-top: 2rem;
   padding-bottom: 2rem;
-  --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   width: 100%;
 }
 
 @media (min-width: 1024px){
   .white-style{
-    margin-top: 2rem;
+    margin-top: 2.5rem;
   }
 }
 
@@ -2288,6 +2304,8 @@ ul {
   position: fixed;
   right: 0.5rem;
   bottom: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
 @media (min-width: 768px){
