--- a/flaskr/templates/journal/journal.html
+++ b/flaskr/templates/journal/journal.html
@@ -7,15 +7,15 @@
 {{ super() }}
 {% endblock %}
 
-<div class="grid grid-cols-1 lg:grid-cols-2 gap-8 w-full min-h-screen border-2">
+<div class="grid grid-cols-1 lg:grid-cols-2 gap-0 lg:gap-8 w-full min-h-screen border-2">
     {% for journal in journals %}
     <div class="h-screen flex flex-wrap items-center border">
         <!-- journal -->
-        <div class="border-2 w-full h-full sm:h-5/6 shadow-md bg-no-repeat bg-cover bg-center rounded" style="background-image: url(/static/image/paper6.png);" id="{{ journal.id }}">
+        <div class="border-2 w-full h-5/6 shadow-md bg-no-repeat bg-cover bg-center rounded" style="background-image: url(/static/image/paper6.png);" id="{{ journal.id }}">
             <!-- photo -->
             <div class="border-2 w-full h-1/2 2xl:h-2/3 flex justify-center relative">
                 <div class="flex justify-center w-5/6 h-full bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
-                    <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-10 2xl:-top-14">
+                    <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-4 sm:-top-10 2xl:-top-14">
                     <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
                         <h1 class="text-2xl xl:text-3xl 2xl:text-4xl text-center">
                             {{ journal.title }}
@@ -24,7 +24,7 @@
                 </div>
                 <div class="w-1/3 absolute top-16 right-0 transform rotate-2 flex items-center justify-center">
                     <img src="/static/image/label3.png" alt="" class="w-full shadow-md">
-                    <h1 class="absolute text-lg xl:text-xl 2xl:text-2xl text-center">
+                    <h1 class="absolute text-xs sm:text-lg xl:text-xl 2xl:text-2xl text-center">
                         {{ journal.city }}, {{ journal.country }}
                     </h1>
                 </div>
@@ -89,7 +89,11 @@
 
     </div>
     {% endfor %}
-</div>    
+</div>
+
+{% block back %}
+{{ super() }}
+{% endblock %} 
 
 </div>
 {% endblock %}
