--- a/flaskr/templates/contact/contact.html
+++ b/flaskr/templates/contact/contact.html
@@ -5,10 +5,10 @@
     {% block header %}
     {{ super() }}
     {% endblock %}
-    <div class="bg-style border">
+    <div class="bg-style">
     
         <div class="text-center">
-            <h1 class="text-4xl mb-8">THANK YOU</h1>
+            <h1 class="text-4xl mb-8">Thank You</h1>
             <h1 class="sub-subtitle font-normal mb-4">Feel free to contact me</h1>
             <h1 class="sub-subtitle mb-8">
                 <small>
@@ -17,11 +17,11 @@
                     <br>All Rights Reserved
                 </small>
             </h1>
-            <div class="w-full flex justify-center ">
+            <!-- <div class="w-full flex justify-center ">
                 <div class="w-1/2 sm:w-1/4">
                     <img src="/static/image/dance.png" alt="dance">
                 </div>
-            </div>
+            </div> -->
         </div>
 
     </div>
