--- a/flaskr/templates/login/login.html
+++ b/flaskr/templates/login/login.html
@@ -6,8 +6,8 @@
     {% block header %}
     {{ super() }}
     {% endblock %}
-    
-    <div class="bg-style border">
+
+    <div class="bg-style">
        
         <div class="layout-3">
             <h1 class="subtitle">Login</h1>
@@ -21,7 +21,7 @@
                         {{render_field(form.password, class="input-form")}}
                     </h6>
                     <h6 class="mt-4 lg:mt-8">
-                        {{form.submit(class="h-full btn-blue")}}
+                        {{form.submit(class="h-full btn-lightorange")}}
                     </h6>
                 </form>
             </div>
