--- a/flaskr/templates/add_journal/add_journal.html
+++ b/flaskr/templates/add_journal/add_journal.html
@@ -41,7 +41,7 @@
                     {{render_field(form.comment, rows="3", class="input-form h-auto rounded-3xl")}}
                 </h6>
                 <h6 class="mt-2 lg:mt-4">
-                    {{render_field(form.picture_path, class="input-form h-auto")}}
+                    {{render_field(form.picture_path, class="input-form sm:h-auto")}}
                 </h6>
                 <h6 class="mt-4 lg:mt-8">
                     {{form.submit(class="h-10 btn-lightorange px-6")}}
