--- a/flaskr/templates/add_journal/add_journal.html
+++ b/flaskr/templates/add_journal/add_journal.html
@@ -8,44 +8,49 @@
 {% endblock %}
     <div class="bg-style border">
 
-    <div class="w-full sm:w-5/6 md:w-4/5 xl:w-3/5 2xl:w-1/2 border">
-    <!-- <div class="layout-2 border"> -->
+    <div class="layout-2 border">
+    <!-- <div class="w-full sm:w-5/6 md:w-4/5 xl:w-3/5 2xl:w-1/2 border"> -->
     <!-- <div class="w-4/5 2xl:w-2/3 border"> -->
         <h1 class="subtitle">Write Journal</h1>
         <div class="white-style">
 
             {% if current_user.is_authenticated %}
-            <form method="POST" enctype="multipart/form-data" class="form-style font-josefin border">
+            <form method="POST" enctype="multipart/form-data" class="form-style font-josefin flex border-4">
                 {{form.csrf_token}}
                 {{ form.from_user_id(value=current_user.id) }}
-                <p class="w-full flex items-center justify-between border-2">
-                    <div>
-                        {{render_field(form.start_date, placeholder="yyyy-mm-dd", class="input-form")}}
+                <!-- <div class="w-1/2 mr-2"> -->
+                <div class="w-1/2 flex flex-wrap content-between mr-2">
+                    <div class="w-full">
+                        <p>
+                            {{render_field(form.start_date, placeholder="yyyy-mm-dd", class="input-form")}}
+                        </p>
+                        <p class="mt-2 lg:mt-4">
+                            {{render_field(form.end_date, placeholder="yyyy-mm-dd", class="input-form")}}
+                        </p>
                     </div>
-                    <div>
-                        {{render_field(form.end_date, placeholder="yyyy-mm-dd", class="input-form")}}
+                    <div class="w-full">
+                        <p>
+                            {{render_field(form.country, class="input-form")}}
+                        </p>
+                        <p class="mt-2 lg:mt-4">
+                            {{render_field(form.city, class="input-form")}}
+                        </p>
                     </div>
-                </p>
-                <p class="h-full w-full flex items-center justify-between mt-2 lg:mt-4 border-2">
-                    <div>
-                        {{render_field(form.country, class="input-form")}}
-                    </div>
-                    <div>
-                        {{render_field(form.city, class="input-form")}}
-                    </div>
-                </p>
-                <p class="mt-2 lg:mt-4">
-                    {{render_field(form.title, class="input-form")}}
-                </p>
-                <p class="mt-2 lg:mt-4">
-                    {{render_field(form.comment, rows="3", class="input-form h-auto rounded-3xl")}}
-                </p>
-                <p class="mt-2 lg:mt-4">
-                    {{render_field(form.picture_path, class="input-form sm:h-auto")}}
-                </p>
-                <p class="mt-4 lg:mt-8">
-                    {{form.submit(class="h-10 btn-lightorange px-6")}}
-                </p>
+                </div>
+                <div class="w-1/2 ml-2">
+                    <p>
+                        {{render_field(form.title, class="input-form")}}
+                    </p>
+                    <p class="mt-2 lg:mt-4">
+                        {{render_field(form.comment, rows="3", class="input-form h-auto rounded-3xl")}}
+                    </p>
+                    <p class="mt-2 lg:mt-4">
+                        {{render_field(form.picture_path, class="input-form sm:h-auto")}}
+                    </p>
+                    <p class="mt-4 lg:mt-8">
+                        {{form.submit(class="h-10 btn-lightorange px-6")}}
+                    </p>
+                </div>
             </form>
             {% endif %}
         </div>
