--- a/flaskr/static/css/src/style.css
+++ b/flaskr/static/css/src/style.css
@@ -66,7 +66,7 @@
         @apply inline-block hover:opacity-75 duration-300;
     }
     .btn-toggle {
-        @apply flex items-center bg-transparent hover:bg-orange focus:outline-none border border-gray-700 hover:border-white hover:text-white rounded duration-300 py-2 px-3;
+        @apply flex items-center bg-transparent hover:bg-orange focus:outline-none border border-gray-700 hover:border-orange hover:text-white rounded duration-300 py-2 px-3;
     }
     /* history.html */
     .albums-style {
