--- a/flaskr/templates/search/search.html
+++ b/flaskr/templates/search/search.html
@@ -15,10 +15,10 @@
                 {{form.csrf_token}}
                 <div class="search-wrap">
                     <h6 class="search-bar">
-                        {{render_field(form.keyword, class="h-full input-form mt-0 py-2", placeholder="Let's search with location name")}}
+                        {{render_field(form.keyword, class="input-form mt-0 py-2", placeholder="Let's search with location name!")}}
                     </h6>
                     <h6 class="mt-4 md:mt-0">
-                        {{form.submit(class="h-full btn-blue py-2")}}
+                        {{form.submit(class="h-10 btn-lightorange py-2")}}
                     </h6>
                 </div>
             </form>
