--- a/flaskr/templates/user/user.html
+++ b/flaskr/templates/user/user.html
@@ -34,7 +34,7 @@
                                 {{render_field(form.picture_path, class="h-full input-form", placeholder="Upload your icon")}}
                             </h6>
                             <h6>
-                                {{form.submit(class="h-full btn-blue")}}
+                                {{form.submit(class="h-full btn-lightorange")}}
                             </h6>
                         </div>
                     </form>
