--- a/flaskr/templates/add_journal/add_journal.html
+++ b/flaskr/templates/add_journal/add_journal.html
@@ -2,15 +2,13 @@
 {% extends "/base.html" %}
 {% block content %}
 
-<div class="base-style min-h-screen border-4">
+<div class="base-style min-h-screen md:h-screen border-4">
 {% block header %}
 {{ super() }}
 {% endblock %}
-    <div class="bg-style h-screen border">
+    <div class="bg-style h-screen md:h-full border">
 
     <div class="layout-2 border">
-    <!-- <div class="w-full sm:w-5/6 md:w-4/5 xl:w-3/5 2xl:w-1/2 border"> -->
-    <!-- <div class="w-4/5 2xl:w-2/3 border"> -->
         <h1 class="subtitle">Write Journal</h1>
         <div class="white-style">
 
