--- a/flaskr/templates/add_journal/add_journal.html
+++ b/flaskr/templates/add_journal/add_journal.html
@@ -45,7 +45,7 @@
                     <p class="mt-2 lg:mt-4">
                         {{render_field(form.picture_path, class="input-form sm:h-auto")}}
                     </p>
-                    <p class="mt-4 lg:mt-8">
+                    <p class="mt-4 lg:mt-8 text-right">
                         {{form.submit(class="h-10 btn-lightorange py-0 sm:py-0 px-6")}}
                     </p>
                 </div>
