--- a/flaskr/templates/search/search.html
+++ b/flaskr/templates/search/search.html
@@ -26,7 +26,7 @@
             {% if not form.keyword.data %}
             {% else %}
             <div class="white-style">
-                <div class="w-full h-48 sm:h-80 overflow-scroll">
+                <div class="w-full h-48 sm:h-96 overflow-scroll">
                     <div class="wrap-full-style h-full">
                     {% set isMatched = {'isMatched':False} %}
 
@@ -38,7 +38,7 @@
                             <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-6">
                             <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
                                 <a href="{{ url_for('journal.journal', _anchor=journal.id) }}">
-                                <h1 class="text-2xl text-center">
+                                <h1 class="text-xl text-center">
                                     {{ journal.title }}
                                 </h1>
                                 </a>
