--- a/flaskr/templates/user/user.html
+++ b/flaskr/templates/user/user.html
@@ -9,7 +9,7 @@
 
     <div class="bg-style borde-4">
     
-        <div class="user-style">
+        <div class="user-style py-4">
             {% if current_user.is_authenticated %}
             <h1 class="subtitle">Hello, {{current_user.username}}</h1>
             <div class="white-style">
@@ -43,15 +43,22 @@
                         Your Journals
                     </h6>
     
-                    {% if current_user.is_authenticated %}
-                    {% for journal in journals %}
-                    <div class="w-full flex justify-center border-4">
+                    <div class="w-full flex flex-wrap justify-center border-4">
+                        {% for journal in journals %}
                         {% if current_user.id == journal.from_user_id %}
-                        <img src="{{ url_for('static', filename=journal.picture_path) }}" class="transform-scale shadow-lg">
+                        <div class="flex justify-center w-1/3 h-56 bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md m-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
+                            <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-6">
+                            <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
+                                <a href="{{ url_for('journal.journal', _anchor=journal.id) }}">
+                                <h1 class="text-xl text-center">
+                                    {{ journal.title }}
+                                </h1>
+                                </a>
+                            </div>
+                        </div>
                         {% endif %}
+                        {% endfor %}
                     </div>
-                    {% endfor %}
-                    {% endif %}
 
                     <h6 class="mt-8 lg:mt-16">
                         Your Favorite Journals
@@ -61,12 +68,15 @@
                     {% for like_journal in like_journals %}
                         {% for journal in journals %}
                         {% if like_journal.from_user_id == current_user.id and like_journal.to_journal_id == journal.id %}
-                        <div class="img-size">
-                            <a href="{{ url_for('journal.journal', _anchor=journal.title) }}">
-                                <img src="{{ url_for('static', filename=journal.picture_path) }}" class="transform-scale shadow-lg">
-                            </a>
-                            <p class="font-semibold mt-2">{{ journal.city }}, {{ journal.country }}</p>
-                            <p class="small mt-1">{{ journal.title }}</p>
+                        <div class="flex justify-center w-1/3 h-56 bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md m-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
+                            <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-6">
+                            <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
+                                <a href="{{ url_for('journal.journal', _anchor=journal.id) }}">
+                                <h1 class="text-xl text-center">
+                                    {{ journal.title }}
+                                </h1>
+                                </a>
+                            </div>
                         </div>
                         {% if isLiked.update({'isLiked':True}) %}{% endif %}
                         {% endif %}
