--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -27,8 +27,6 @@
     <meta name="twitter:image" content="https://japanese-city-pop.herokuapp.com/static/image/ogp.png">
     <!-- CSS -->
     <link rel="stylesheet" href="/static/css/public/style.css">
-    <!-- <link rel="stylesheet" href="/static/css/base.css"> -->
-    <!-- <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> -->
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=La+Belle+Aurore&family=Zeyada&display=swap" rel="stylesheet">
@@ -55,7 +53,7 @@
     <title>Journaly</title>
 </head>
 
-<body class="bg-gray-100" id="top" style="background-image: url(/static/image/paper2.jpeg);">
+<body class="bg-beige" id="top" style="background-image: url(/static/image/paper2.jpeg);">
     {% block content %}
 
     {% block header %}
