--- a/flaskr/templates/search/search.html
+++ b/flaskr/templates/search/search.html
@@ -32,9 +32,8 @@
 
                     {% for journal in journals %}
                         {% if form.keyword.data.lower() in journal.country.lower() or form.keyword.data.lower() in journal.city.lower() %}
-
                         
-                        <div class="flex justify-center w-1/3 h-full bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md m-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
+                        <div class="flex justify-center w-full sm:w-1/3 h-full bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md m-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
                             <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-6">
                             <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
                                 <a href="{{ url_for('journal.journal', _anchor=journal.id) }}">
