--- a/flaskr/templates/user/user.html
+++ b/flaskr/templates/user/user.html
@@ -43,10 +43,10 @@
                         Your Journals
                     </h6>
     
-                    <div class="w-full flex flex-wrap justify-center border-4">
+                    <div class="w-full flex flex-wrap justify-center">
                         {% for journal in journals %}
                         {% if current_user.id == journal.from_user_id %}
-                        <div class="flex justify-center w-1/3 h-56 bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md m-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
+                        <div class="flex justify-center w-full sm:w-1/3 h-56 bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md m-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
                             <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-6">
                             <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
                                 <a href="{{ url_for('journal.journal', _anchor=journal.id) }}">
@@ -63,12 +63,12 @@
                     <h6 class="mt-8 lg:mt-16">
                         Your Favorite Journals
                     </h6>
-                    <div class="wrap-style">                 
+                    <div class="w-full flex flex-wrap justify-center">                 
                     {% set isLiked = {'isLiked':False} %}
                     {% for like_journal in like_journals %}
                         {% for journal in journals %}
                         {% if like_journal.from_user_id == current_user.id and like_journal.to_journal_id == journal.id %}
-                        <div class="flex justify-center w-1/3 h-56 bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md m-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
+                        <div class="flex justify-center w-full sm:w-1/3 h-56 bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md m-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
                             <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-6">
                             <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
                                 <a href="{{ url_for('journal.journal', _anchor=journal.id) }}">
